<?xml version="1.0"?>
<package format="2">

  <name>mrs_rviz_plugins</name>
  <version>0.1.0</version>

  <description>Plugin for rviz to work with the MRS system</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>
  <depend>mrs_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>

</package>
