<?xml version="1.0"?>
<package format="2">

  <name>mrs_rviz_plugins</name>
  <version>1.0.4</version>

  <description>Plugin for rviz to work with the MRS system</description>

  <author email="vrbamato@fel.cvut.cz">Matous Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matous Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <!-- <depend>rviz_satellite</depend> -->
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
